[package]
name = "tea-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.9", features = ["json"] }
lazy_static = "1.4.0"
rand = "0.8.5"
dotenv = "0.15.0"
google-cloud-storage = "0.24.0"
