[package]
name = "tea-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.9", features = ["json"] }
lazy_static = "1.4.0"
rand = "0.8.5"
dotenv = "0.15.0"
anyhow = "1.0.100"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_urlencoded = "0.7.1"
alloy = { version = "^1.1.3", features = [
  "arbitrary",
  "contract",
  "dyn-abi",
  "eip712",
  "json",
  "providers",
  "reqwest-rustls-tls",
  "rpc",
  "rpc-types",
  "rpc-types-debug",
  "rpc-types-trace",
  "signer-local",
  "signers",
  "sol-types",
], default-features = false }
serde_json5 = "0.2.1"
url = { version = "2.5.7", features = ["serde"] }
